--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "googleapis": "^39.2.0",
+    "node-cron": "^3.0.0",
     "request": "^2.88.2"
   }
 }
